@@ -101,12 +101,27 @@ static int _sub_topic_tokenise(const char *subtopic, struct _sub_token **topics)
 	struct _sub_token *new_topic, *tail = NULL;
 	char *token;
 	char *local_subtopic = NULL;
+	char *real_subtopic;
 
 	assert(subtopic);
 	assert(topics);
 
 	local_subtopic = _mosquitto_strdup(subtopic);
 	if(!local_subtopic) return MOSQ_ERR_NOMEM;
+	real_subtopic = local_subtopic;
+
+	if(local_subtopic[0] == '/'){
+		new_topic = _mosquitto_malloc(sizeof(struct _sub_token));
+		if(!new_topic) goto cleanup;
+		new_topic->next = NULL;
+		new_topic->topic = _mosquitto_strdup("");
+		if(!new_topic->topic) goto cleanup;
+
+		*topics = new_topic;
+		tail = new_topic;
+
+		local_subtopic++;
+	}
 
 	token = strtok(local_subtopic, "/");
 	while(token){
@@ -126,12 +141,12 @@ static int _sub_topic_tokenise(const char *subtopic, struct _sub_token **topics)
 		token = strtok(NULL, "/");
 	}
 	
-	_mosquitto_free(local_subtopic);
+	_mosquitto_free(real_subtopic);
 
 	return MOSQ_ERR_SUCCESS;
 
 cleanup:
-	_mosquitto_free(local_subtopic);
+	_mosquitto_free(real_subtopic);
 
 	tail = *topics;
 	*topics = NULL;
@@ -287,10 +302,6 @@ int mqtt3_sub_add(mqtt3_context *context, const char *sub, int qos, struct _mosq
 		tree = 2;
 		if(strlen(sub+5) == 0) return MOSQ_ERR_SUCCESS;
 		if(_sub_topic_tokenise(sub+5, &tokens)) return 1;
-	}else if(sub[0] == '/'){
-		tree = 1;
-		if(strlen(sub+1) == 0) return MOSQ_ERR_SUCCESS;
-		if(_sub_topic_tokenise(sub+1, &tokens)) return 1;
 	}else{
 		tree = 0;
 		if(strlen(sub) == 0) return MOSQ_ERR_SUCCESS;
@@ -300,9 +311,6 @@ int mqtt3_sub_add(mqtt3_context *context, const char *sub, int qos, struct _mosq
 	subhier = root->children;
 	while(subhier){
 		if(!strcmp(subhier->topic, "") && tree == 0){
-			rc = _sub_add(context, qos, subhier, tokens);
-			break;
-		}else if(!strcmp(subhier->topic, "/") && tree == 1){
 			rc = _sub_add(context, qos, subhier, tokens);
 			break;
 		}else if(!strcmp(subhier->topic, "$SYS") && tree == 2){
@@ -334,9 +342,6 @@ int mqtt3_sub_remove(mqtt3_context *context, const char *sub, struct _mosquitto_
 	if(!strncmp(sub, "$SYS/", 5)){
 		tree = 2;
 		if(_sub_topic_tokenise(sub+5, &tokens)) return 1;
-	}else if(sub[0] == '/'){
-		tree = 1;
-		if(_sub_topic_tokenise(sub, &tokens)) return 1;
 	}else{
 		tree = 0;
 		if(_sub_topic_tokenise(sub, &tokens)) return 1;
@@ -345,9 +350,6 @@ int mqtt3_sub_remove(mqtt3_context *context, const char *sub, struct _mosquitto_
 	subhier = root->children;
 	while(subhier){
 		if(!strcmp(subhier->topic, "") && tree == 0){
-			rc = _sub_remove(context, subhier, tokens);
-			break;
-		}else if(!strcmp(subhier->topic, "/") && tree == 1){
 			rc = _sub_remove(context, subhier, tokens);
 			break;
 		}else if(!strcmp(subhier->topic, "$SYS") && tree == 2){
@@ -380,9 +382,6 @@ int mqtt3_db_messages_queue(struct _mosquitto_db *db, const char *source_id, con
 	if(!strncmp(topic, "$SYS/", 5)){
 		tree = 2;
 		if(_sub_topic_tokenise(topic+5, &tokens)) return 1;
-	}else if(topic[0] == '/'){
-		tree = 1;
-		if(_sub_topic_tokenise(topic+1, &tokens)) return 1;
 	}else{
 		tree = 0;
 		if(_sub_topic_tokenise(topic, &tokens)) return 1;
@@ -391,14 +390,6 @@ int mqtt3_db_messages_queue(struct _mosquitto_db *db, const char *source_id, con
 	subhier = db->subs.children;
 	while(subhier){
 		if(!strcmp(subhier->topic, "") && tree == 0){
-			if(retain){
-				/* We have a message that needs to be retained, so ensure that the subscription
-				 * tree for its topic exists.
-				 */
-				_sub_add(NULL, 0, subhier, tokens);
-			}
-			rc = _sub_search(db, subhier, tokens, source_id, topic, qos, retain, stored);
-		}else if(!strcmp(subhier->topic, "/") && tree == 1){
 			if(retain){
 				/* We have a message that needs to be retained, so ensure that the subscription
 				 * tree for its topic exists.
@@ -588,9 +579,6 @@ int mqtt3_retain_queue(mosquitto_db *db, mqtt3_context *context, const char *sub
 	if(!strncmp(sub, "$SYS/", 5)){
 		tree = 2;
 		if(_sub_topic_tokenise(sub+5, &tokens)) return 1;
-	}else if(sub[0] == '/'){
-		tree = 1;
-		if(_sub_topic_tokenise(sub+1, &tokens)) return 1;
 	}else{
 		tree = 0;
 		if(_sub_topic_tokenise(sub, &tokens)) return 1;
@@ -599,9 +587,6 @@ int mqtt3_retain_queue(mosquitto_db *db, mqtt3_context *context, const char *sub
 	subhier = db->subs.children;
 	while(subhier){
 		if(!strcmp(subhier->topic, "") && tree == 0){
-			rc = _retain_search(db, subhier, tokens, context, sub, sub_qos);
-			break;
-		}else if(!strcmp(subhier->topic, "/") && tree == 1){
 			rc = _retain_search(db, subhier, tokens, context, sub, sub_qos);
 			break;
 		}else if(!strcmp(subhier->topic, "$SYS") && tree == 2){
